# boomboom

./: .gitignore  README.md  conda_env.yml  must-install.sh  pyproject.toml  requirements.txt
model_convertor/: Cargo.toml  model_convertor.py
model_convertor/src/: main.rs
scripts/: display_pictures.py  parameter_display.py  plot_learning_curves.py  predict.py  predict_live_stream.py  predict_with_face_mesh.py  preprocess.py  train.py  user_input_filter.py
